# greenhunter

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/CircleDetector/: CMakeLists.txt  CircleDetector.cpp  CircleSquareDetector.cpp  demo.cpp
src/CircleDetector/inc/: CircleDetector.h  CircleSquareDetector.h
src/CircleMap/: CMakeLists.txt  CircleMap.cpp  MapLocalizer.cpp  MapServer.cpp
src/CircleMap/inc/: CircleMap.h  MapLocalizer.h  MapServer.h
src/Drone/: CMakeLists.txt  Drone.cpp  TelemetryServer.cpp
src/Drone/inc/: Drone.h  FrameTelemetry.h  Telemetry.h  TelemetryServer.h
src/Greenhunter/: CMakeLists.txt
src/Greenhunter/inc/: CameraParams.h  Circle.h  Position.h
src/Hunter/: CMakeLists.txt  Hunter.cpp  MapClient.cpp  MavClient.cpp  main.cpp
src/Hunter/inc/: Hunter.h  MapClient.h  MavClient.h
src/MissionLogger/: CMakeLists.txt  MissionLogger.cpp
src/MissionLogger/inc/: MissionLogger.h
src/Scout/: CMakeLists.txt  Scout.cpp  TelemetryServer.cpp  main.cpp
src/Scout/inc/: Drone.h  Scout.h  TelemetryServer.h
